Closed Bug 1542706 Opened 7 years ago Closed 7 years ago

Crash in [@ PLDHashTable::Remove | mozilla::dom::`anonymous namespace'::Datastore::NoteInactiveDatabase(class mozilla::dom::`anonymous namespace'::Database*)]

Categories

(Core :: Storage: localStorage & sessionStorage, defect, P1)

Desktop
All
defect

Tracking

()

RESOLVED FIXED
mozilla68
Tracking Status
firefox-esr60 --- unaffected
firefox66 --- unaffected
firefox67 --- unaffected
firefox68 + fixed

People

(Reporter: jcristau, Assigned: janv)

References

(Blocks 1 open bug)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug is for crash report bp-fbf0e179-63f7-472c-874f-9e31b0190408.

Top 10 frames of crashing thread:

0 xul.dll PLDHashTable::Remove xpcom/ds/PLDHashTable.cpp:604
1 xul.dll void mozilla::dom::`anonymous namespace'::Datastore::NoteInactiveDatabase dom/localstorage/ActorsParent.cpp:4581
2 xul.dll void mozilla::dom::`anonymous namespace'::Snapshot::Finish dom/localstorage/ActorsParent.cpp:5359
3 xul.dll void mozilla::dom::`anonymous namespace'::Snapshot::ActorDestroy dom/localstorage/ActorsParent.cpp:5371
4 xul.dll mozilla::dom::PBackgroundLSDatabaseParent::DestroySubtree ipc/ipdl/PBackgroundLSDatabaseParent.cpp:346
5 xul.dll void mozilla::ipc::PBackgroundParent::DestroySubtree ipc/ipdl/PBackgroundParent.cpp:4905
6 xul.dll mozilla::ipc::PBackgroundParent::OnChannelError ipc/ipdl/PBackgroundParent.cpp:4851
7 xul.dll nsresult mozilla::detail::RunnableMethodImpl<mozilla::dom::ServiceWorkerRegistration*, void  xpcom/threads/nsThreadUtils.h:1174
8 xul.dll nsThread::ProcessNextEvent xpcom/threads/nsThread.cpp:1180
9 xul.dll NS_ProcessNextEvent xpcom/threads/nsThreadUtils.cpp:486

This crash near null started a couple of days ago with buildid 20190405095028.

Keywords: regression
OS: Windows 7 → All
Hardware: x86 → Desktop

:janv, could you investigate please ?

Flags: needinfo?(jvarga)
Blocks: 1540402
Flags: needinfo?(jvarga)

Hi,

My bug is for crash report

https://crash-stats.mozilla.org/report/index/4c242946-831d-4731-ab97-522280190409

And I use

  • Linux
  • Nightly Asan 68.0a1 (2019-04-08) (64 bits)

I made a backup of the folders

thank's

Christophe

Thanks, we are investigating it.

Assignee: nobody → jvarga
Status: NEW → ASSIGNED
Priority: -- → P1
Crash Signature: namespace)::Datastore::NoteInactiveDatabase(mozilla::dom::(anonymous namespace)::Database*)] → namespace)::Datastore::NoteInactiveDatabase(mozilla::dom::(anonymous namespace)::Database*)] [@ PLDHashTable::Remove | mozilla::dom::(anonymous namespace)::Snapshot::Finish ]
See Also: → 1542223
Crash Signature: namespace)::Datastore::NoteInactiveDatabase(mozilla::dom::(anonymous namespace)::Database*)] [@ PLDHashTable::Remove | mozilla::dom::(anonymous namespace)::Snapshot::Finish ] → namespace)::Datastore::NoteInactiveDatabase(mozilla::dom::(anonymous namespace)::Database*)] [@ PLDHashTable::Remove | mozilla::dom::(anonymous namespace)::Snapshot::Finish] [@ PLDHashTable::Remove | mozilla::dom::`anonymous namespace'::Snapshot::Fini…
Pushed by jvarga@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/a9e3b31c2738 LSNG: Don't close database if there's a snapshot registered; r=asuth
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla68
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: