Bug 1542706 - LSNG: Don't close database if there's a snapshot registered; r=asuth

Differential Revision: https://phabricator.services.mozilla.com/D27437