dom/localstorage/ActorsParent.cpp
@@ -5151,8 +5151,14 @@ void Database::RequestAllowToClose() {
   // child actor. Except the case when the actor was already destroyed.
   if (mActorDestroyed) {
     MOZ_ASSERT(mAllowedToClose);
-  } else if (NS_WARN_IF(!SendRequestAllowToClose())) {
-    // Allow to close immediately if sending failed.
+    return;
+  }
+
+  if (NS_WARN_IF(!SendRequestAllowToClose()) && !mSnapshot) {
+    // This is not necessary, because there should be a runnable scheduled that
+    // will call ActorDestroy which calls AllowToClose. However we can speedup
+    // the shutdown a bit if we do it here directly, but only if there's no
+    // registered snapshot.
     AllowToClose();
   }
 }
@@ -5161,6 +5167,7 @@ void Database::AllowToClose() {
   AssertIsOnBackgroundThread();
   MOZ_ASSERT(!mAllowedToClose);
   MOZ_ASSERT(mDatastore);
+  MOZ_ASSERT(!mSnapshot);
 
   mAllowedToClose = true;
 
